contrib/media/image/tests/snapshots/golden__png_to_jpeg_conversion.snap
---
source: crates/rskit-media-image/tests/golden.rs
expression: "serde_json::json!({\n    \"is_jpeg\": is_jpeg, \"width\": w, \"height\": h, \"size_bytes\": bytes.len(),\n    \"size_reasonable\": bytes.len() > 1000 && bytes.len() < 500_000,\n})"
---
{
  "height": 600,
  "is_jpeg": true,
  "size_bytes": 52587,
  "size_reasonable": true,
  "width": 600
}
