contrib/media/image/tests/snapshots/golden__resize_real_jpeg.snap
---
source: crates/rskit-media-image/tests/golden.rs
assertion_line: 67
expression: "serde_json::json!({ \"width\": w, \"height\": h, \"format\": \"jpeg\", })"
---
{
  "format": "jpeg",
  "height": 100,
  "width": 100
}
